[package]
name = "cable_lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
password-auth = "1.0.0"
rand = "0.8.5"
rpassword = "7.3.1"
rusqlite = "0.30.0"
rusqlite_migration = "1.1.0"
